# document-autofill

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  compose.yaml  prestart.sh  pyproject.toml
alembic/: env.py
src/: create_app.py  main.py
src/core/: config.py  database.py
src/core/models/: base.py
src/static/css/: main.css
src/templates/: index.html
