[project]
name = "document-autofill"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "UP", "I", "SIM", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
